# FamilyPhotoApp

./: pyproject.toml
src/: __init__.py  app.py
src/constants/: application.py  error_messages.py  main_window.py  media.py  modals.py  types.py
src/core/: base.py  modals.py
src/core/exceptions/: __init__.py  application_exception.py
src/core/modals/: modals.py
src/core/repositories/: base_repository.py  media_repository.py  media_tag_repository.py  tag_repository.py
src/core/services/: media_service.py  tag_service.py
src/ui/: __init__.py  content.py  create_media.py  main.py  media.py  person.py
src/utils/: data_structure.py  dir.py  position.py
