[project]
name = "familyphotoapp"
version = "0.1.0"
description = "Desktop приложение для работы с симейным архивом."
authors = [
    { name = "Григорий Т.", email = "you@example.com" }
]
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "screeninfo (>=0.8.1,<0.9.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psutil (>=7.1.1,<8.0.0)",
    "dearpygui (>=2.1.0,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test.dependencies]
pillow = "^12.0.0"
faker = "^37.11.0"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "B"]


[tool.ruff.format]
quote-style = "double"
